# TestRNApp

./: .gitignore  App.tsx  ExampleComponent.tsx  PenumbraStatus.tsx  PraxMobile.ts  ServerExampleComponent.tsx  app.json  package-lock.json  package.json  penumbraClient.ts
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/testrnapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile  PraxMobileBridge.h  PraxMobileBridge.mm
ios/TestRNApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/TestRNApp.xcodeproj/: project.pbxproj
ios/TestRNApp.xcodeproj/xcshareddata/xcschemes/: TestRNApp.xcscheme
ios/TestRNApp.xcworkspace/: contents.xcworkspacedata
ios/TestRNAppTests/: TestRNAppTests.m
ios/prax_mobile.xcframework/: Info.plist
ios/prax_mobile.xcframework/ios-arm64/Headers/: prax_mobile.h
prax_mobile/: Cargo.toml  Makefile  build.rs  rust-toolchain.toml
prax_mobile/src/: lib.rs  logging.rs  view_server.rs
