[package]
name = "prax_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.80"                                # Allows to use c types CString, c_char, etc.
warp = "0.3"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.26.0"
