[package]
name = "prax_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.80" # Allows to use c types CString, c_char, etc.
once_cell = "1.20"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
penumbra-keys = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-asset = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-app = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-stake = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-shielded-pool = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-num = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-community-pool = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-distributions = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-fee = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-ibc = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sct = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-dex = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-auction = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-governance = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-funding = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-view = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-proto = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra", features = [
    "rpc",
] }

[build-dependencies]
cbindgen = "0.26.0"
